updated two 2023 records

--- a/courses_other.html
+++ b/courses_other.html
@@ -4340,7 +4340,6 @@ permalink: /courses/other-courses/
                         </tr>
 
 
-
                         <tr>
                             <td>Fleming Fund Regional Grant SEQAFRICA</td>
                             <td>
@@ -4430,8 +4429,187 @@ permalink: /courses/other-courses/
 
                             </td>
                         </tr>
+<!-- 
+                2023 courses -->
+
+                <tr>
+                    <td>Fogarty International Center, National Institutes of Health</td>
+                    <td>
+                        <li><a href="https://drive.google.com/drive/folders/1EcgnWdQatPG1FzVu3bTZ56DHBTmALP3e"
+                                target="_blank">FIC/JHU Workshop for Implementation of Genomic Epidemiology
+                            </a></li>
+                    </td>
+                    <td>Beginner</td>
+                    <td>Research/academia</td>
+
+                    <td>For laboratorians already doing techniques such as RT-PCR/qRT-PCR that were interested in sequencing their own samples, analyze them using phylogenetics, and be able to interpret the results epidemiologically.
+                    </td>
+                    <td>Epidemiology, Sample Processing, Library prep Bioinformatics</td>
+                    <td>
 
 
+
+                        <!-- inside modal-->
+                        <!-- Button to Open the Modal -->
+                        <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+                            data-target="#myModal52">
+                            more
+                        </button>
+
+                        <!-- The Modal -->
+                        <div class="modal fade" id="myModal52">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+
+                                    <!-- Modal Header -->
+                                    <div class="modal-header">
+                                        <p class="modal-title font-weight-bold">FIC/JHU Workshop for Implementation of Genomic Epidemiology </p>
+                                        <button type="button" class="close"
+                                            data-dismiss="modal">&times;</button><br>
+                                    </div>
+
+                                    <!-- Modal body -->
+                                    <div class="modal-body">
+                                        <table class="table table-striped">
+                                            <thead>
+                                                <tr>
+                                                    <th>Location</th>
+                                                    <th>Sub-topics</th>
+                                                    <th>Formal assessment</th>
+                                                    <th>Accredited</th>
+                                                    <th>Available</th>
+                                                    <th>Duration</th>
+                                                    <th>Live/Online</th>
+                                                    <th>With subtitles</th>
+                                                </tr>
+
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Usually UAE, as it is easy for most participants to travel to and get visas.</td>
+                                                    <td>Pre-workshop Software Installation Sessions:<br>
+                                                        Day 1: Introduction to Genomics Technologies and Oxford Nanopore Sequencing<br><br>
+                                                        Day 2: Library Preparation, Sequencing, and Consensus Generation<br><br>
+                                                        Day 3: Phylogenetics<br><br>
+                                                        Day 4: Phylogenetics (Continued)<br><br>
+                                                        Day 5: Wrap Up
+
+                                                    </td>
+                                                    <td>no</td>
+                                                    <td></td>
+                                                    <td>On the basis of funding availability.</td>
+                                                    <td>5 day workshop.</td>
+                                                    <td>Face-to-face sessions & Remote </td>
+                                                    <td>Subtitles in a variety of languages are available for pre-recorded materials. Interpreters have been used for live sessions.</td>
+                                                </tr>
+                                            </tbody>
+
+                                        </table>
+                                    </div>
+
+                                    <!-- Modal footer -->
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-danger btn-sm"
+                                            data-dismiss="modal">Close</button>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </td>
+                </tr>
+                <!-- 
+                53 courses -->
+                <tr>
+                    <td>Fogarty International Center, National Institutes of Health</td>
+                    <td>
+                        <li><a href="https://nih.app.box.com/folder/155365414970?s=9212dlug6lat6jc77bn6wsqfqpwruvwz"
+                                target="_blank">FIC/JHU Genomic Epidemiology for Public Health Laboratories
+                            </a></li>
+                    </td>
+                    <td>Intermediate</td>
+                    <td>Research/academia</td>
+
+                    <td>For public health laboratorians already doing techniques such as RT-PCR/qRT-PCR that were interested in sequencing their own samples, analyze them using phylogenetics, and be able to interpret the results epidemiologically
+                    </td>
+                    <td>Pathogen genomics for clinicians, Library prep, Sequencing, Bioinformatics, Biostatistics</td>
+                    <td>
+
+
+
+                        <!-- inside modal-->
+                        <!-- Button to Open the Modal -->
+                        <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+                            data-target="#myModal53">
+                            more
+                        </button>
+
+                        <!-- The Modal -->
+                        <div class="modal fade" id="myModal53">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+
+                                    <!-- Modal Header -->
+                                    <div class="modal-header">
+                                        <p class="modal-title font-weight-bold">FIC/JHU Workshop for Implementation of Genomic Epidemiology </p>
+                                        <button type="button" class="close"
+                                            data-dismiss="modal">&times;</button><br>
+                                    </div>
+
+                                    <!-- Modal body -->
+                                    <div class="modal-body">
+                                        <table class="table table-striped">
+                                            <thead>
+                                                <tr>
+                                                    <th>Location</th>
+                                                    <th>Sub-topics</th>
+                                                    <th>Formal assessment</th>
+                                                    <th>Accredited</th>
+                                                    <th>Available</th>
+                                                    <th>Duration</th>
+                                                    <th>Live/Online</th>
+                                                    <th>With subtitles</th>
+                                                </tr>
+
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Usually UAE, as it is easy for most participants to travel to and get visas.</td>
+                                                    <td>Pre-workshop Software Installation Session <br><br> 
+                                                        Session 1: Genomic Epidemiology - Introduction and Laboratory Concepts  <br><br> 
+                                                        Session 2: Processing and Visualizing Sequence Data  <br><br> 
+                                                        Session 3: Phylogenetics  <br><br> 
+                                                        Session 4: Phylogenetics (Continued) and Phylodynamics  <br><br> 
+                                                        Session 5: Wrap Up<br><br> 
+
+                                                    </td>
+                                                    <td>no</td>
+                                                    <td></td>
+                                                    <td>On the basis of funding availability.</td>
+                                                    <td>5 day workshop.</td>
+                                                    <td>Face-to-face sessions & Remote </td>
+                                                    <td>Subtitles in a variety of languages are available for pre-recorded materials. Interpreters have been used for live sessions.</td>
+                                                </tr>
+                                            </tbody>
+
+                                        </table>
+                                    </div>
+
+                                    <!-- Modal footer -->
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-danger btn-sm"
+                                            data-dismiss="modal">Close</button>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </td>
+                </tr>
                     <tfoot>
                         <tr>
                             <th>Organisation</th>
