--- a/profiles.html
+++ b/profiles.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Bioinformatics Profiles
-permalink: /profiles/bioinformatics-profiles/
+permalink: /courses/bioinformatics-profiles/
 ---
 <!-- https://code.jquery.com/jquery-3.5.1.js
 
@@ -16,167 +16,101 @@ permalink: /profiles/bioinformatics-profiles/
     src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/select/1.2.1/js/dataTables.select.min.js" type="text/javascript"></script>
 
+<p>Select the modules below <p>
 
-<style>
-    td.details-control {
-        text-align: center;
-        color: forestgreen;
-        cursor: pointer;
-    }
+<label for="healthsafetyCheckbox">
+    <input type="checkbox" id="healthsafetyCheckbox"> Health and Safety
+</label>
+  <br>
+<label for="ethicspolicyCheckbox">
+  <input type="checkbox" id="ethicspolicyCheckbox"> Ethics & Policy
+</label>
+<br>
+<label for="introGECheckbox">
+  <input type="checkbox" id="introGECheckbox"> Introduction to Genetic Epidemiology
+</label>
+<br>
+<label for="unixCheckbox">
+    <input type="checkbox" id="unixCheckbox"> Unix, Scripting
+  </label>
+  <br>
+<label for="progCheckbox">
+      <input type="checkbox" id="progCheckbox"> Programming
+</label>
+<br>
+<label for="bioinfCheckbox">
+        <input type="checkbox" id="bioinfCheckbox"> Bioinformatics
+</label>
+<br>
+<label for="wHPCCheckbox">
+        <input type="checkbox" id="wHPCCheckbox"> Workflows, HPC
+</label>
+<br>
 
-    tr.shown td.details-control {
-        text-align: center;
-        color: red;
-    }
-</style>
 
+<button onclick="displayDegreeTitle()" type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+data-target="#myModal1">
+Display Bioinformatics Profile
+</button>
+  
+    <!-- The Modal -->
+    <div class="modal fade" id="myModal1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
 
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <p class="modal-title font-weight-bold"> </p>
+                    <button type="button" class="close"
+                        data-dismiss="modal">&times;</button><br>
+                </div>
 
-<table width="100%" class="display" id="example" cellspacing="0">
-    <thead>
-        <tr>
-            <th></th>
-            <th>Job Title</th>
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <p><b>Your Profile:</b> <span id="degreeTitle">Can not generate profile, Please select the appropriate modules!</span></p>
+                </div>
 
-        </tr>
-    </thead>
-    <tfoot>
-        <tr>
-            <th></th>
-            <th>Job Title</th>
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger btn-sm"
+                        data-dismiss="modal">Close</button>
+                </div>
 
-        </tr>
-    </tfoot>
-</table>
+            </div>
+        </div>
+    </div>
+
+<br>
+<!-- <button class="btn btn-danger btn-sm" onclick="displayDegreeTitle()">Display Bioinformatics Profile</button>
+<br>
+<br>
+<p>Your Profile: <span id="degreeTitle">Undecided, Please</span></p> -->
+
 
 <script>
+ function displayDegreeTitle() {
+      // Get the completed NGS courses
+      var healthsafetyCompleted = document.getElementById("healthsafetyCheckbox").checked;
+      var ethicspolicyCompleted = document.getElementById("ethicspolicyCheckbox").checked;
+      var introGECompleted = document.getElementById("introGECheckbox").checked;
+      var unixCompleted = document.getElementById("unixCheckbox").checked;
+      var progCompleted = document.getElementById("progCheckbox").checked;
+      var bioinfCompleted = document.getElementById("bioinfCheckbox").checked;
+      var wHPCCompleted = document.getElementById("wHPCCheckbox").checked;
 
+      // Determine the degree/profile title based on the completed courses
+      var degreeTitle = "Undecided";
 
-    $(document).ready(function () {
+      if (ethicspolicyCompleted && introGECompleted && unixCompleted && progCompleted && bioinfCompleted ) {
+        degreeTitle = "Bioinformatics Scientist";
+      } else if (healthsafetyCompleted && ethicspolicyCompleted && introGECompleted ) {
+        degreeTitle = "Wetlab Scientist";
+      } else if (aaintroGECompleted) {
+        degreeTitle = "You have selected Introduction to Genetic Epidemiology";
+      }
 
-        var table = $('#example').DataTable({
-            "data": testdata.data,
-            select: "single",
-            "columns": [
-                {
-                    "className": 'details-control',
-                    "orderable": false,
-                    "data": null,
-                    "defaultContent": '',
-                    "render": function () {
-                        return '<i class="fa fa-plus-square" aria-hidden="true"></i>';
-                    },
-                    width: "15px"
-                },
-                { "data": "job_title" },
-                // { "data": "position" },
-                // { "data": "office" },
-                // { "data": "salary" }
-            ],
-            "order": [[1, 'asc']]
-        });
-
-        // Add event listener for opening and closing details
-        $('#example tbody').on('click', 'td.details-control', function () {
-            var tr = $(this).closest('tr');
-            var tdi = tr.find("i.fa");
-            var row = table.row(tr);
-
-            if (row.child.isShown()) {
-                // This row is already open - close it
-                row.child.hide();
-                tr.removeClass('shown');
-                tdi.first().removeClass('fa-minus-square');
-                tdi.first().addClass('fa-plus-square');
-            }
-            else {
-                // Open this row
-                row.child(format(row.data())).show();
-                tr.addClass('shown');
-                tdi.first().removeClass('fa-plus-square');
-                tdi.first().addClass('fa-minus-square');
-            }
-        });
-
-        table.on("user-select", function (e, dt, type, cell, originalEvent) {
-            if ($(cell.node()).hasClass("details-control")) {
-                e.preventDefault();
-            }
-        });
-    });
-
-    function format(d) {
-
-        // `d` is the original data object for the row
-        return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
-            '<tr>' +
-            '<td><b> Foundational Skills </b></td>' +
-            // '<td>' + d.job_title + '</td>' +
-            '</tr>' +
-            '<tr>' +
-            // '<td>Extension number:</td>' +
-            '<tr>' +
-            '<td>' + d.skill_1 + '</td>' +
-            '</tr>' +
-            '<tr>' +
-            '<td>' + d.skill_2 + '</td>' +
-            '</tr>' +
-            '<tr>' +
-            '<td>' + d.skill_3 + '</td>' +
-            '</tr>' +
-            '<tr>' +
-            '<td>' + d.skill_4 + '</td>' +
-            '</tr>' +
-            '<tr>' +
-            // '<td>Extra info:</td>' +
-            // '<td>And any further details here (images etc)...</td>' +
-            '</tr>' +
-            '</table>'
-
-
-            ;
+      // Display the degree/profile title
+      document.getElementById("degreeTitle").textContent = degreeTitle;
     }
-    var testdata = {
-        "data": [
-            {
-                "job_title": "Laboratory Manager",
 
-                "start_date": "2011/04/25",
-                // "office": "Edinburgh",
-                "extn": "5421",
-                "skill_1": "Health and Safety",
-                "skill_2": "Ethics and Policy",
-                "skill_3": "Introduction to Genetic Epidemiology",
-            },
-            {
-                "job_title": "Wetlab Scientist",
-
-                "start_date": "2011/07/25",
-                // "office": "Tokyo",
-                "extn": "8422"
-            },
-            {
-                "job_title": "Bioinformatics Scientist",
-
-                "start_date": "2009/01/12",
-                // "office": "San Francisco",
-                "extn": "1562",
-                "skill_1": "Unix/Linux, Scripting",
-                "skill_2": "Programming",
-                "skill_3": "Bioinformatics",
-                "skill_4": "Workflows, HPC"
-            },
-            {
-                "job_title": "Systems Administrator",
-
-                "start_date": "2012/03/29",
-                // "office": "Edinburgh",
-                "extn": "6224",
-                "skill_1": "Unix/Linux, Scripting",
-            }
-
-
-
-        ]
-    };
 </script>
