--- a/profiles0004.html
+++ b/profiles0004.html
@@ -87,7 +87,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table1" data-target=".table1">
           <td>Foundational Skills</td>
           <td></td>
-          <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/brickwall_1.png" /></td> 
+          <td class="text-center"><img alt="..." width="10%" src="/ngs-academy/img/brickwall_1.png" /></td> 
           <td><button class="btn btn-default btn-sm"> View More</button></td>
           <!--  
           <td></td>
@@ -145,7 +145,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table2" data-target=".table2">
           <td>Applied Skills: Viral Pathogens</td>
           <td></td> 
-        <td class="text-center"> <img alt="..." width="10%" src="{{ site.baseurl }}img/virus_1.png" /></td> 
+        <td class="text-center"> <img alt="..." width="10%" src="/ngs-academy/img/virus_1.png" /></td> 
           <td><button class="btn btn-default btn-sm"> View More</button></td>
           <!--  
           <td></td>
@@ -203,7 +203,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table3" data-target=".table3">
           <td>Applied Skills: Bacterial Pathogens</td>
           <td></td> 
-          <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/bacteria_1.png" /></td>  
+          <td class="text-center"><img alt="..." width="10%" src="/ngs-academy/img/bacteria_1.png" /></td>  
           <td><button class="btn btn-default btn-sm"> View More</button></td>
           <!-- 
           <td></td>
