--- a/profiles0004.html
+++ b/profiles0004.html
@@ -88,7 +88,7 @@ permalink: /courses/bioinformatics-profiles4/
           <td>Foundational Skills</td>
           <td></td>
           <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/brickwall_1.png" /></td> 
-          <td><button class="btn btn-default btn-sm"> View More</button></td>
+          <td><button class="btn btn-default btn-sm"> View More &darr;</button></td>
           <!--  
           <td></td>
           <td></td> -->
@@ -146,7 +146,7 @@ permalink: /courses/bioinformatics-profiles4/
           <td>Applied Skills: Viral Pathogens</td>
           <td></td> 
         <td class="text-center"> <img alt="..." width="10%" src="{{ site.baseurl }}img/virus_1.png" /></td> 
-          <td><button class="btn btn-default btn-sm"> View More</button></td>
+          <td><button class="btn btn-default btn-sm"> View More 	&darr;</button></td>
           <!--  
           <td></td>
           <td></td> -->
@@ -204,7 +204,7 @@ permalink: /courses/bioinformatics-profiles4/
           <td>Applied Skills: Bacterial Pathogens</td>
           <td></td> 
           <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/bacteria_1.png" /></td>  
-          <td><button class="btn btn-default btn-sm"> View More</button></td>
+          <td><button class="btn btn-default btn-sm"> View More &darr;</button></td>
           <!-- 
           <td></td>
           <td></td>  -->
