added arrows on the more button

--- a/profiles0004.html
+++ b/profiles0004.html
@@ -87,8 +87,8 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table1" data-target=".table1">
           <td>Foundational Skills</td>
           <td></td>
-          <td class="text-center"><img alt="..." width="10%" src="/ngs-academy/img/brickwall_1.png" /></td> 
-          <td><button class="btn btn-default btn-sm"> View More</button></td>
+          <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/brickwall_1.png" /></td> 
+          <td><button class="btn btn-default btn-sm"> View More &darr;</button></td>
           <!--  
           <td></td>
           <td></td> -->
@@ -145,8 +145,8 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table2" data-target=".table2">
           <td>Applied Skills: Viral Pathogens</td>
           <td></td> 
-        <td class="text-center"> <img alt="..." width="10%" src="/ngs-academy/img/virus_1.png" /></td> 
-          <td><button class="btn btn-default btn-sm"> View More</button></td>
+        <td class="text-center"> <img alt="..." width="10%" src="{{ site.baseurl }}img/virus_1.png" /></td> 
+          <td><button class="btn btn-default btn-sm"> View More 	&darr;</button></td>
           <!--  
           <td></td>
           <td></td> -->
@@ -203,8 +203,8 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table3" data-target=".table3">
           <td>Applied Skills: Bacterial Pathogens</td>
           <td></td> 
-          <td class="text-center"><img alt="..." width="10%" src="/ngs-academy/img/bacteria_1.png" /></td>  
-          <td><button class="btn btn-default btn-sm"> View More</button></td>
+          <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/bacteria_1.png" /></td>  
+          <td><button class="btn btn-default btn-sm"> View More &darr;</button></td>
           <!-- 
           <td></td>
           <td></td>  -->
