updated other pathogen surveilance courses

--- a/courses_other.html
+++ b/courses_other.html
@@ -6353,18 +6353,14 @@ permalink: /courses/other-courses/
                             <tbody>
                                 <tr>
                                     <td>Locally or in-country</td>
-                                    <td>Session 1: Introduction to Microbial Sequencing<br><br> 
-                                        Session 2: Analysis of Bacterial WGS ONT Run Results<br><br> 
-                                        Session 3: ONT MinKNOW EPI2ME Run Metrics<br><br> 
-                                        Session 4: ONT Sequencing<br><br>
-                                        Session 5: ONT for Influenza Sequencing<br><br>
-                                        Session 6: Sequencing SARS-CoV-2<br><br>
-                                        Session 7: WGS of Bacteria<br><br>
+                                    <td>Session 1: ONT Sequencing<br><br> 
+                                        Session 2: Bacterial WGS<br><br> 
+                                        Session 3: ONT MinKNOW EPI2ME Run Metrics<br><br>
                                     </td>
-                                    <td>No, we do ask that trainees send us results of their first few runs so we can help evaluate them.</td>
                                     <td>No</td>
                                     <td>No</td>
-                                    <td>Often 1-2 weeks with a mixture of lectures, hands-on lab work and discussions </td>
+                                    <td>-</td>
+                                    <td>1-2 weeks. Mixture of lectures, hands-on work and discussions</td>
                                     <td>Face to Face </td>
                                     <td>No, but we can explore this option.</td>
                                 </tr>
@@ -6388,6 +6384,358 @@ permalink: /courses/other-courses/
 </tr>
 
 
+
+ <!-- 74 courses -->
+ <tr>
+    <td>Peter Doherty Institute</td>
+    <td>
+        <li>Bacterial Illumina Sequencing
+           </li>
+    </td>
+    <td>Beginner</td>
+    <td>Public Health</td>
+
+    <td>Lab scientists
+    </td>
+    <td>Epidemiology, Sample processing DNA/RNA extraction, Library prep, Sequencing, Bioinformatics, Data analysis, Data visualisation, Data management</td>
+    <td>
+
+
+
+        <!-- inside modal-->
+        <!-- Button to Open the Modal -->
+        <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+            data-target="#myModal74">
+            more
+        </button>
+
+        <!-- The Modal -->
+        <div class="modal fade" id="myModal74">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <p class="modal-title font-weight-bold">Bacterial Illumina Sequencing
+                        </li></p>
+                        <button type="button" class="close"
+                            data-dismiss="modal">&times;</button><br>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Location</th>
+                                    <th>Sub-topics</th>
+                                    <th>Formal assessment</th>
+                                    <th>Accredited</th>
+                                    <th>Available</th>
+                                    <th>Duration</th>
+                                    <th>Live/Online</th>
+                                    <th>With subtitles</th>
+                                </tr>
+
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Locally or in-country</td>
+                                    <td>Session 1: Illumina Sequencing<br><br> 
+                                        Session 2: Bacterial WGS<br><br> 
+                                        Session 3: Illumina Data Management<br><br>
+                                        Session 4: Galaxy<br><br>
+                                        Session 5: Introduction to Microbial Sequencing<br><br>
+                                    </td>
+                                    <td>No</td>
+                                    <td>No</td>
+                                    <td>-</td>
+                                    <td>1-2 weeks. Mixture of lectures, hands-on work and discussions</td>
+                                    <td>Face to Face </td>
+                                    <td>No, but we can explore this option.</td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger btn-sm"
+                            data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+    </td>
+</tr>
+
+
+ <!-- 75 courses -->
+ <tr>
+    <td>Peter Doherty Institute</td>
+    <td>
+        <li>Bacterial ONT Sequencing
+       </li>
+    </td>
+    <td>Beginner</td>
+    <td>Public Health</td>
+
+    <td>Lab scientists
+    </td>
+    <td>Epidemiology, Sample processing DNA/RNA extraction, Library prep, Sequencing, Bioinformatics, Data analysis, data visualisation, data management</td>
+    <td>
+
+
+
+        <!-- inside modal-->
+        <!-- Button to Open the Modal -->
+        <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+            data-target="#myModal75">
+            more
+        </button>
+
+        <!-- The Modal -->
+        <div class="modal fade" id="myModal75">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <p class="modal-title font-weight-bold">Bacterial ONT Sequencing</p>
+                        <button type="button" class="close"
+                            data-dismiss="modal">&times;</button><br>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Location</th>
+                                    <th>Sub-topics</th>
+                                    <th>Formal assessment</th>
+                                    <th>Accredited</th>
+                                    <th>Available</th>
+                                    <th>Duration</th>
+                                    <th>Live/Online</th>
+                                    <th>With subtitles</th>
+                                </tr>
+
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Locally or in-country</td>
+                                    <td>Session 1: ONT Sequencing<br><br> 
+                                        Session 2: Bacterial WGS<br><br> 
+                                        Session 3: ONT MinKNOW EPI2ME Run Metrics<br><br>
+                                    </td>
+                                    <td>No</td>
+                                    <td>No</td>
+                                    <td>-</td>
+                                    <td>1-2 weeks. Mixture of lectures, hands-on work and discussions</td>
+                                    <td>Face to Face </td>
+                                    <td>No, but we can explore this option.</td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger btn-sm"
+                            data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+    </td>
+</tr>
+
+
+ <!-- 76 courses -->
+ <tr>
+    <td>Peter Doherty Institute</td>
+    <td>
+        <li><a href="https://biomedicalsciences.unimelb.edu.au/departments/microbiology-Immunology/research/our-research-centres-and-programs/centre-for-pathogen-genomics/engagment/expanding-whole-genome-sequencing-capacity-in-the-asia-pacific-region"
+                target="_blank">PulseNet Asia Pacific Illumina Sequencing
+            </a></li>
+    </td>
+    <td>Beginner</td>
+    <td>Public Health</td>
+
+    <td>Wet Lab scientists
+    </td>
+    <td>Epidemiology, Sample processing DNA/RNA extraction, Library prep, Sequencing, Bioinformatics, Data analysis, data visualisation, data management</td>
+    <td>
+
+
+
+        <!-- inside modal-->
+        <!-- Button to Open the Modal -->
+        <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+            data-target="#myModal76">
+            more
+        </button>
+
+        <!-- The Modal -->
+        <div class="modal fade" id="myModal76">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <p class="modal-title font-weight-bold">PulseNet Asia Pacific Illumina Sequencing</p>
+                        <button type="button" class="close"
+                            data-dismiss="modal">&times;</button><br>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Location</th>
+                                    <th>Sub-topics</th>
+                                    <th>Formal assessment</th>
+                                    <th>Accredited</th>
+                                    <th>Available</th>
+                                    <th>Duration</th>
+                                    <th>Live/Online</th>
+                                    <th>With subtitles</th>
+                                </tr>
+
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Locally (Melbourne) and in-country</td>
+                                    <td>Session 1: Bioinformatics from a Wet Lab Perspective<br><br> 
+                                        Session 2: Bioinformatics in Public Health<br><br> 
+                                        Session 3: Introduction to NCBI & Data Sharing<br><br>
+                                        Session 4: Introduction to Illumina<br><br>
+                                        Session 5: ONT Sequencing<br><br>
+                                        Session 6: Illumina Sequencing<br><br>
+                                        Session 7: Terra.bio (Theiagen)<br><br>
+                                    </td>
+                                    <td>No</td>
+                                    <td>Yes we have initial certification and yearly proficiency testing</td>
+                                    <td>Presented at regular intervals </td>
+                                    <td>1-2 weeks. Mixture of lectures, hands-on lab work and dicusssions.</td>
+                                    <td>Face to Face, Live remote sessions </td>
+                                    <td>No, but we can explore this option.</td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger btn-sm"
+                            data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+    </td>
+</tr>
+
+
+ <!-- 77 courses -->
+ <tr>
+    <td>Peter Doherty Institute</td>
+    <td>
+        <li>Genomics for Clinicians</li>
+    </td>
+    <td>Intermediate</td>
+    <td>Public Health</td>
+    <td>Clinicians, ID Physicians etc.
+    </td>
+    <td>Pathogen Genomics for clinicians, Sample processing DNA/RNA extraction, Library prep, Sequencing, Bioinformatics</td>
+    <td>
+
+
+
+        <!-- inside modal-->
+        <!-- Button to Open the Modal -->
+        <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+            data-target="#myModal77">
+            more
+        </button>
+
+        <!-- The Modal -->
+        <div class="modal fade" id="myModal77">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <p class="modal-title font-weight-bold">Genomics for Clinicians</p>
+                        <button type="button" class="close"
+                            data-dismiss="modal">&times;</button><br>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Location</th>
+                                    <th>Sub-topics</th>
+                                    <th>Formal assessment</th>
+                                    <th>Accredited</th>
+                                    <th>Available</th>
+                                    <th>Duration</th>
+                                    <th>Live/Online</th>
+                                    <th>With subtitles</th>
+                                </tr>
+
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Locally or in-country</td>
+                                    <td>Session 1: DNA Extraction<br><br> 
+                                        Session 2: Illumina Sequencing<br><br> 
+                                        Session 3: ONT Sequencing<br><br>
+                                        Session 4: Basic Data Interpretations<br><br>
+                                        Session 5: PHL Workflows<br><br>
+                                        Session 6: Manual Handling vs Automation<br><br>
+                                    </td>
+                                    <td>No</td>
+                                    <td>No, the course is a component of a larger training program for ID clinicians.</td>
+                                    <td>Presented at regular intervals</td>
+                                    <td>1 week. Mixture of lectures, hands-on training and discussions. </td>
+                                    <td>Face to Face </td>
+                                    <td>No, but we can explore this option.</td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger btn-sm"
+                            data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+    </td>
+</tr>
 
 
 
